[gd_scene load_steps=3 format=3 uid="uid://dvlmutw7v33j0"]

[ext_resource type="Script" path="res://src/components/editors/local/editor_item/editor_item.gd" id="1_lyr11"]
[ext_resource type="Texture2D" uid="uid://bqnuds1nn277g" path="res://assets/Godot128x128.svg" id="2_iu11t"]

[node name="EditorItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_lyr11")

[node name="Favorite" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="FavoriteButton" type="TextureButton" parent="Favorite"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_iu11t")

[node name="InfoVBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="InfoVBox"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="InfoVBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="InfoVBox/Title"]
unique_name_in_owner = true
layout_mode = 2
text = "test"

[node name="Control" type="Control" parent="InfoVBox/Title"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="Path" type="HBoxContainer" parent="InfoVBox"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2

[node name="ExploreButton" type="Button" parent="InfoVBox/Path"]
unique_name_in_owner = true
layout_mode = 2
flat = true

[node name="PathLabel" type="Label" parent="InfoVBox/Path"]
unique_name_in_owner = true
layout_mode = 2
text = "/home/kovkel/editor/path"
